# LidarY1

./: .gitignore  .gitmodules  Dockerfile  README.md  distort.rviz  log.txt
src/common/libs/: .gitignore  CMakeLists.txt  package.xml
src/common/libs/include/common/: calibration.hpp  calli.hpp  callibration.hpp  common.hpp  id_pub_manager.hpp  parameter.hpp  publisher.hpp  transform.hpp
src/common/libs/include/common/filters/: spherical_voxel_grid.hpp
src/common/libs/include/common/msgs/: autosense_msgs
src/common/libs/include/common/types/: object.hpp  type.h
src/common/libs/src/filters/: spherical_voxel_grid.cpp
src/image_converter/: CMakeLists.txt  package.xml
src/image_converter/src/: image_converter_node.cpp
src/image_converter_lidar/: CMakeLists.txt  README.md  package.xml
src/image_converter_lidar/src/: image_converter_node.cpp  image_converter_rviz.cpp
src/kitti_ros/: .gitignore
src/kitti_ros/launch/: kitti_player.launch
src/kitti_ros/scripts/: kitti_player.py
src/kitti_ros/scripts/utils/: KittiPreprocessor.py  XmlParser.py  __init__.py
src/perception/libs/classifiers/: CMakeLists.txt  package.xml
src/perception/libs/classifiers/include/: base_classifier.hpp  ism_classifier.hpp
src/perception/libs/classifiers/include/classifiers/: base_classifier.hpp  classifier_manager.hpp  ism_classifier.hpp  visual_classifier.hpp
src/perception/libs/classifiers/model_files/: trained_ism_model_car_ped.txt
src/perception/libs/classifiers/src/: ism_classifier.cpp  visual_classifier.cpp
src/perception/libs/object_builders/src/: min_box_object_builder.cpp
src/perception/libs/roi_filters/include/roi_filters/: roi.hpp
src/perception/libs/segmenters/: CMakeLists.txt
src/perception/libs/segmenters/include/segmenters/: base_segmenter.hpp
src/perception/libs/segmenters/samples/: CMakeLists.txt
src/perception/libs/segmenters/src/: don_segmenter.cpp  ground_plane_fitting_segmenter.cpp  region_euclidean_segmenter.cpp
src/perception/libs/tracking_lib/: CMakeLists.txt  package.xml
src/perception/libs/tracking_lib/config/: calibration.yaml  callibration.yaml  classifier.yaml  detection.yaml  detection_gpf.yaml  tracking.yaml
src/perception/libs/tracking_lib/config/kitti/: Segmenter.yaml  Segmenter_high.yaml  Segmenter_low.yaml  TrackingWorker.yaml
src/perception/libs/tracking_lib/launch/: demo_gpf.launch  track_classify.launch  track_classify_compare.launch  track_classify_delay.launch  track_classify_high.launch  track_classify_low.launch
src/perception/libs/tracking_lib/rviz/: demo.rviz  demo_gpf.rviz
src/perception/libs/tracking_lib/samples/: CMakeLists.txt  detection_node.cpp  gpf_node.cpp  tracking_node.cpp  tracking_node_compare.cpp
src/perception/libs/tracking_lib/src/: hm_tracking_worker.cpp
(+8 files in other folders)
